[package]
name = "willard"
version = "0.1.1"
authors = ["Yoon Gun <cfr2ak@gmail.com>"]
edition = "2018"
description = "Single Qubit simulatior with quantum gates implemention"
repository = "https://github.com/cfr2ak/willard/tree/master"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num = "0.2"
approx = "0.3"
accel = "0.2.0"
accel-derive = "0.2.0"